NetBSD Problem Report #37959

From cube@cubidou.net  Tue Feb  5 06:52:13 2008
Return-Path: <cube@cubidou.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id D3B1063BAF8
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  5 Feb 2008 06:52:13 +0000 (UTC)
Message-Id: <20080205065207.01A7C14E64@yoda.cubidou.net>
Date: Tue,  5 Feb 2008 07:52:06 +0100 (CET)
From: cube@cubidou.net
Reply-To: cube@cubidou.net
To: gnats-bugs@gnats.NetBSD.org
Subject: re(4) vs. hw vlan tagging
X-Send-Pr-Version: 3.95

>Number:         37959
>Category:       kern
>Synopsis:       re(4) has troubles with hw vlan tagging
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    tsutsui
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 05 06:55:00 +0000 2008
>Closed-Date:    Fri Mar 28 17:08:16 +0000 2008
>Last-Modified:  Fri Mar 28 17:08:16 +0000 2008
>Originator:     Quentin Garnier
>Release:        NetBSD 4.0_STABLE
>Organization:
EVE, S.A.
>Environment:
re0 at pci0 dev 11 function 0: RealTek 8169/8110 Gigabit Ethernet (rev. 0x10)
re0: interrupting at ioapic0 pin 19 (irq 11)
re0: Ethernet address 00:0f:b5:42:7b:fa
re0: using 256 tx descriptors
rgephy0 at re0 phy 7: RTL8169S/8110S 1000BASE-T media interface, rev. 0
rgephy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
>Description:
	When setting up vlan interfaces on that re device with
	4.0_STABLE, things go seriously bad.

	I haven't had enough time to precisely look at what happens, but
	I know at least that "large" packets never reach their
	destinations.
>How-To-Repeat:
	Configure a vlan, generate traffic over it.
>Fix:
	No fix, just a workaround, disabling hw vlan tagging in the
	driver.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Sat, 15 Mar 2008 00:50:38 +0900
Responsible-Changed-Why:
I'll take a look.


State-Changed-From-To: open->feedback
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sat, 15 Mar 2008 00:50:38 +0900
State-Changed-Why:
Patch provided:
http://mail-index.netbsd.org/tech-net/2008/03/14/msg000290.html


From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37959 CVS commit: src/sys/dev/ic
Date: Tue, 18 Mar 2008 14:06:56 +0000 (UTC)

 Module Name:	src
 Committed By:	tsutsui
 Date:		Tue Mar 18 14:06:56 UTC 2008

 Modified Files:
 	src/sys/dev/ic: rtl8169.c

 Log Message:
 It looks vlan tag info must appear not only in the first descriptor
 but in all descriptors of a multi-descriptor transmission attempt on re(4).

 Problem was reported and fix was confirmed by Chris Brookes on tech-net.
 Should also close PR kern/37959.


 To generate a diff of this commit:
 cvs rdiff -r1.97 -r1.98 src/sys/dev/ic/rtl8169.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37959 CVS commit: [netbsd-4] src/sys/dev/ic
Date: Mon, 24 Mar 2008 20:50:33 +0000 (UTC)

 Module Name:	src
 Committed By:	bouyer
 Date:		Mon Mar 24 20:50:33 UTC 2008

 Modified Files:
 	src/sys/dev/ic [netbsd-4]: rtl8169.c rtl81x9reg.h

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #1105):
 	sys/dev/ic/rtl8169.c: revisions 1.94, 1.95, 1.97, 1.98
 	sys/dev/ic/rtl81x9reg.h: revision 1.28
 No need to preserve RE_NTXDESC_RSVD on re_start().
 FreeBSD says "16 bits" comment about RTK_GTXSTART was incorrect.
 Use CSR_WRITE_1() for it. (though the previous code also worked)
 Don't fetch DMA descriptor after BUS_DMASYNC_PREREAD op.
 It looks vlan tag info must appear not only in the first descriptor
 but in all descriptors of a multi-descriptor transmission attempt on re(4).
 Problem was reported and fix was confirmed by Chris Brookes on tech-net.
 Should also close PR kern/37959.


 To generate a diff of this commit:
 cvs rdiff -r1.72.2.8 -r1.72.2.9 src/sys/dev/ic/rtl8169.c
 cvs rdiff -r1.25.2.2 -r1.25.2.3 src/sys/dev/ic/rtl81x9reg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sat, 29 Mar 2008 02:08:16 +0900
State-Changed-Why:
should be fixed and pulled up to netbsd-4.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.